--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="img/hacker.png" type="image/x-icon">
     <script src="script.js"></script>
-    <title>Document</title>
+    <title>Devjunior.com</title>
   </head>
   <body>
     <nav class="navbar">
