--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="img/hacker.png" type="image/x-icon">
     <script src="script.js"></script>
-    <title>Devjunior.com</title>
+    <title>JuniorDev.com</title>
   </head>
+
   <body>
     <nav class="navbar">
       <div class="logo">
@@ -18,8 +19,6 @@
         <a href="index.html" class="site-title">JuniorDev.com</a>
       </div>
       <ul class="nav-links">
-
-        </label>
 
         <div class="menu">
           <li><a href="/">HOME</a></li>
