--- a/index.html
+++ b/index.html
@@ -38,8 +38,6 @@
     </nav>
     <main>
       <div class="home-texto">
-        
-
         <h1 style="color:white" class="random">Sobre mim</h1>
         <p style="padding: 2% 7%; color: white;">
         Desde criança, sempre gostei de aprender coisas novas, o que cultivou em mim o interesse por tecnologia. <br>
@@ -57,7 +55,7 @@
     </main>
 
     <footer>Para saber mais sobre mim, visite o meu 
-    <a href="https://github.com/LucasnOliveira">GitHub</a>
+    <a href="https://github.com/LucasnOliveira" target="_blank">GitHub</a>
     </footer>
   </body>
 </html>
