topnav logo ajustes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
         </div>
       </ul>
     </nav>
-    <main>
+    
+    
+    <!--<main>
       <div class="home-texto">
         <h1 style="color:white" class="random">Sobre mim</h1>
         <p style="padding: 2% 7%; color: white;">
@@ -52,10 +54,10 @@
         <br>
       </p>
       </div>
-    </main>
+    </main> -->
 
-    <footer>Para saber mais sobre mim, visite o meu 
+    <!--<footer>Para saber mais sobre mim, visite o meu 
     <a href="https://github.com/LucasnOliveira" target="_blank">GitHub</a>
-    </footer>
+    </footer> -->
   </body>
 </html>
